# ChangeLog for dev-php/PEAR-PEAR
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-PEAR/ChangeLog,v 1.106 2008/03/17 12:48:51 jokey Exp $

*PEAR-PEAR-1.7.1 (17 Mar 2008)

  17 Mar 2008; <jokey@gentoo.org> +files/pear.conf-r1,
  +PEAR-PEAR-1.7.1.ebuild:
  Version bump from project overlay

  03 Feb 2008; Jakub Moc <jakub@gentoo.org>
  +PEAR-PEAR-1.7.1.ebuild:
  Version bump; major ebuild rewrite. Masked for now, see Known bugs at
  http://pear.php.net/package/PEAR/download/1.7.1/ before using this!

  06 Dec 2007; Markus Ullmann <jokey@gentoo.org> PEAR-PEAR-1.6.1.ebuild,
  PEAR-PEAR-1.6.2-r1.ebuild:
  LICENSE fix from project overlay

  02 Dec 2007; Jakub Moc <jakub@gentoo.org>
  PEAR-PEAR-1.6.1.ebuild, PEAR-PEAR-1.6.2-r1.ebuild:
  Fix LICENSE

  01 Dec 2007; nixnut <nixnut@gentoo.org> PEAR-PEAR-1.6.2-r1.ebuild:
  Stable on ppc wrt bug 200795

  30 Nov 2007; Steve Dibb <beandog@gentoo.org> PEAR-PEAR-1.6.2-r1.ebuild:
  amd64 stable, bug 200795

  30 Nov 2007; Markus Rothe <corsair@gentoo.org> PEAR-PEAR-1.6.2-r1.ebuild:
  Stable on ppc64; bug #200795

  30 Nov 2007; Markus Meier <maekke@gentoo.org> PEAR-PEAR-1.6.2-r1.ebuild:
  x86 stable, bug #200795

  29 Nov 2007; Markus Ullmann <jokey@gentoo.org> -PEAR-PEAR-1.6.2.ebuild:
  drop old

*PEAR-PEAR-1.6.2-r1 (29 Nov 2007)

  29 Nov 2007; Markus Ullmann <jokey@gentoo.org> +PEAR-PEAR-1.6.2-r1.ebuild:
  Version bump from project overlay

  22 Nov 2007; Jakub Moc <jakub@gentoo.org> +PEAR-PEAR-1.6.2-r1.ebuild:
  Add pear.agavi.org channel for newer dev-php5/agavi

*PEAR-PEAR-1.6.2 (22 Oct 2007)

  22 Oct 2007; Markus Ullmann <jokey@gentoo.org>
  +files/1.6.2-accept-encoding-bug_12116.patch, +PEAR-PEAR-1.6.2.ebuild:
  Version bump from php overlay

  29 Sep 2007; Jakub Moc <jakub@gentoo.org>
  +files/1.6.2-accept-encoding-bug_12116.patch, +files/pear.conf,
  +metadata.xml, +PEAR-PEAR-1.6.2.ebuild: