@@ -2,8 +2,10 @@ AUX pear.conf-r1 379 RMD160 df2595353d3a0ee5474dff41a445ebd2e642a5ec SHA1 a99717
 DIST Archive_Tar-1.3.2.tgz 17150 RMD160 cec105d1cdefd502f209c24c217645cec723d7a2 SHA1 40a16c6fe6cee12d9fd87d487785db2949ffa9ff SHA256 952820c055a770a6d1ecdff487b3de0ff0617a1baca084dac443a6d5f7cde53c
 DIST Console_Getopt-1.2.3.tgz 4011 RMD160 d1624dbcb223395ded9e46285f896d6f5bb5ca74 SHA1 2f4ea028f478123164c3f6588f8a505dc35915df SHA256 1985b1434c13d5e619643c3712e4144d39f66f6fed61994765e6a0f1623680d8
 DIST PEAR-1.7.1.tgz 302377 RMD160 9e98cde01eb21d21daf934ebb03b27d375424e7d SHA1 a4a51b0686a7ad00c68abb23eca80416f18ddfd3 SHA256 127634eccb67e6378ce0a92045314c9a6252a40c5d5026b8b79f5b13e3fce7ab
+DIST PEAR-1.8.1.tgz 290382 RMD160 650c8206420b65569ad3a8bf067d7ff3274fdfae SHA1 67cd4a2a831ad2acb29de44eece7c215e5d3b5a3 SHA256 5de817886bcea77704ee2788700657429dfe48b0036d1d3b3850423f4577ccf1
 DIST Structures_Graph-1.0.2.tgz 30947 RMD160 8eb53f6da109b90bab5d8101e99183a1ae116404 SHA1 300aa0a2effb0b39c4fa8a63a834748ae99c2855 SHA256 d30e72fcb888d17d01d211dd0cdc8bdde8c87554fc4d7de438a4cf0b490a8697
 DIST XML_RPC-1.5.1.tgz 32215 RMD160 6e8b9f4698285609d9c9d4450c59c16083607ee8 SHA1 d28fd6d3139aa247d22428ec6b50e20a3cdaa4b4 SHA256 a5b517eef799df148d6c85ab19e188715a22c069f4507dcb792e5efb7d0f117e
-EBUILD PEAR-PEAR-1.7.1.ebuild 5118 RMD160 5e1e6e23289969a8ce6cc6fd321e83dba34590ee SHA1 2f13827f4dd5bd1f64529da843652b2e82c906b2 SHA256 44d93edeeb8ea4953c329b8bc0136e9388ef01da5d95f7b71e77785b8d6a103b
-MISC ChangeLog 15110 RMD160 0bb7a6e3d4bfc5358139ed3738366cc7407df6d9 SHA1 46ee67e553cf5f47475a8d36bede66ccdf99d8ef SHA256 31314671a28249208560cbaa6348e44eec1fa7d29332df60542d6f878ac5b5bb
+EBUILD PEAR-PEAR-1.7.1.ebuild 5243 RMD160 85389ee5c83721647a3af56967b28715bd1d5c49 SHA1 0fe211f0abca0d70ee05acbbd6f077fe70b60ca3 SHA256 8a3c9697a5096182127c7c487d165421c772feaaeb5b1938e56625958562ce9b
+EBUILD PEAR-PEAR-1.8.1.ebuild 3769 RMD160 58835c67d5e3fa3ae6b934c98d7939755f5e0634 SHA1 b3ad81bef353890eb79ba05f35aedfa5f97560d5 SHA256 893ea592c8c0c78aba1de4f521a8df5eb62f721a38bde3d68ccfe89483119400
+MISC ChangeLog 15461 RMD160 1b3e16a5a519590fecc73eb3d649257ac33649a6 SHA1 cfbef04eb3d9d29013ab683bb91f03b615cb5479 SHA256 aba66907762dcebf1447b4d5755c95e29938cc219b03307b64c46e192854ddfc
 MISC metadata.xml 157 RMD160 a98db3a086fae3c09a903dadbc05f60443ec4b1a SHA1 ddaa23cc35eb917bf8962b652442bebb1ce0f440 SHA256 54f8878ca0228e380abbaa4b529806b5533a6b9b51b3b16c0909e906586a91a1
